Make all h1 left-aligned

--- a/5-best-tools-for-remote-working.html
+++ b/5-best-tools-for-remote-working.html
@@ -168,7 +168,7 @@ permalink: /5-best-tools-for-remote-working/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>5 Best Tools For Remote Working</h1>
                 
