--- a/6-reasons-to-use-shopify.html
+++ b/6-reasons-to-use-shopify.html
@@ -172,7 +172,7 @@ permalink: /6-reasons-to-use-shopify/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>7 Reasons Why You Should Be Using Shopify</h1>
                 
