--- a/6-tips-for-surviving-remote-working.html
+++ b/6-tips-for-surviving-remote-working.html
@@ -168,7 +168,7 @@ permalink: /6-tips-for-surviving-remote-working/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>Remote Working: How to Survive with 6 Tips</h1>
                     
