--- a/about.html
+++ b/about.html
@@ -152,7 +152,7 @@ permalink: /about/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>About Us</h1>
                 <h2>Get to know us better</h2>
