--- a/are-you-inadvertently-abusing-your-customers-data.html
+++ b/are-you-inadvertently-abusing-your-customers-data.html
@@ -173,7 +173,7 @@ permalink: /are-you-inadvertently-abusing-your-customers-data/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>Are You Inadvertently Abusing Your Customers' Data?</h1>
                                
