--- a/backup-wordpress-website-using-updraftplus.html
+++ b/backup-wordpress-website-using-updraftplus.html
@@ -174,7 +174,7 @@ permalink: /backup-wordpress-website-using-updraftplus/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>How to Backup Your WordPress Website with UpdraftPlus</h1>           
             </div>
