--- a/best-free-wordpress-plugins.html
+++ b/best-free-wordpress-plugins.html
@@ -173,7 +173,7 @@ permalink: /best-free-wordpress-plugins/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>10 Best Free WordPress Plugins</h1>           
             </div>
