--- a/blog.html
+++ b/blog.html
@@ -150,7 +150,7 @@ permalink: /blog/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>Sybiltec's Blog</h1>
             </div>
