--- a/clients.html
+++ b/clients.html
@@ -150,7 +150,7 @@ permalink: /clients/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>Sybiltec's Clients</h1>        
             </div>
