--- a/common-website-mistakes.html
+++ b/common-website-mistakes.html
@@ -173,7 +173,7 @@ permalink: /common-website-mistakes/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>10 Common Website Mistakes and How to Avoid Them</h1>           
             </div>
