--- a/contact.html
+++ b/contact.html
@@ -149,7 +149,7 @@ permalink: /contact/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>Contact Sybiltec</h1>          
             </div>
