--- a/cyber-security-best-practices-for-business.html
+++ b/cyber-security-best-practices-for-business.html
@@ -173,7 +173,7 @@ permalink: /cyber-security-best-practices-for-business/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>Cyber Security Best Practices for Business</h1>
                     
