--- a/faqs.html
+++ b/faqs.html
@@ -314,7 +314,7 @@ permalink: /faqs/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>FAQs</h1>               
             </div>
