--- a/fix-slow-wordpress-website.html
+++ b/fix-slow-wordpress-website.html
@@ -173,7 +173,7 @@ permalink: /fix-slow-wordpress-website/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>10 Reasons Why Your WordPress Website is Slow (and How to Fix Them)</h1>
                                
