--- a/free-workshops-greenwich-borough.html
+++ b/free-workshops-greenwich-borough.html
@@ -174,7 +174,7 @@ permalink: /free-workshops-greenwich-borough/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>Free Workshops for Greenwich Businesses</h1>           
             </div>
