--- a/google-search-console.html
+++ b/google-search-console.html
@@ -172,7 +172,7 @@ permalink: /google-search-console/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>How to Use Google Search Console: a Quick Guide</h1>           
             </div>
