--- a/guide-to-updating-your-wordpress-website.html
+++ b/guide-to-updating-your-wordpress-website.html
@@ -172,7 +172,7 @@ permalink: /guide-to-updating-your-wordpress-website/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>A Guide to Updating Your WordPress Website</h1>
                                
