--- a/how-does-a-good-website-showcase-trust.html
+++ b/how-does-a-good-website-showcase-trust.html
@@ -173,7 +173,7 @@ permalink: /how-does-a-good-website-showcase-trust/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>How Does a Good Website Showcase Trust?</h1>
                                
