--- a/how-to-choose-web-designer.html
+++ b/how-to-choose-web-designer.html
@@ -173,7 +173,7 @@ permalink: /how-to-choose-web-designer/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>How to Choose a Web Designer</h1>           
             </div>
