--- a/importance-of-contact-information-on-your-website.html
+++ b/importance-of-contact-information-on-your-website.html
@@ -173,7 +173,7 @@ permalink: /importance-of-contact-information-on-your-website/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>The Importance of Contact Information on Your Website</h1>
                                
