--- a/improve-website-seo.html
+++ b/improve-website-seo.html
@@ -174,7 +174,7 @@ permalink: /improve-website-seo/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>How to Improve the SEO of Your Website</h1>           
             </div>
