--- a/install-ga4-wordpress-website.html
+++ b/install-ga4-wordpress-website.html
@@ -172,7 +172,7 @@ permalink: /install-ga4-wordpress-website/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>How to Install GA4 on Your WordPress Website</h1>          
             </div>
