--- a/privacy-notice.html
+++ b/privacy-notice.html
@@ -150,7 +150,7 @@ permalink: /privacy-notice/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>Privacy Notice</h1>
                                 
