--- a/services.html
+++ b/services.html
@@ -149,7 +149,7 @@ permalink: /services/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>Services</h1>          
             </div>
