--- a/shopify-woocommerce.html
+++ b/shopify-woocommerce.html
@@ -174,7 +174,7 @@ permalink: /shopify-woocommerce/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>Shopify vs WooCommerce: What Are the Differences?</h1>          
             </div>
