--- a/small-business-web-design.html
+++ b/small-business-web-design.html
@@ -150,7 +150,7 @@ permalink: /small-business-web-design/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>Small Business Web Design</h1>
             </div>
