--- a/strategies-for-business-success.html
+++ b/strategies-for-business-success.html
@@ -173,7 +173,7 @@ permalink: /strategies-for-business-success/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>Thriving Through Change: Smart Website Strategies for Small Business Success</h1>           
             </div>
