--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -150,7 +150,7 @@ permalink: /terms-and-conditions/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>Terms and Conditions</h1>
                                 
