--- a/upgrade-google-analytics-4.html
+++ b/upgrade-google-analytics-4.html
@@ -173,7 +173,7 @@ permalink: /upgrade-google-analytics-4/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>How Do I Upgrade to Google Analytics 4?</h1>          
             </div>
