--- a/user-experience-ux.html
+++ b/user-experience-ux.html
@@ -173,7 +173,7 @@ permalink: /user-experience-ux/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>9 Ways to Improve the UX (User Experience) of Your Website</h1>           
             </div>
