--- a/ways-to-speed-up-your-windows-pc.html
+++ b/ways-to-speed-up-your-windows-pc.html
@@ -173,7 +173,7 @@ permalink: /ways-to-speed-up-your-windows-pc/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>8 Ways to Speed Up Your Windows PC</h1>
             </div>
