--- a/web-design-process-explained-12-easy-steps.html
+++ b/web-design-process-explained-12-easy-steps.html
@@ -172,7 +172,7 @@ permalink: /web-design-process-explained-12-easy-steps/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>The Web Design Process Explained in 12 Easy Steps</h1>            
             </div>
