--- a/web-design-surrey.html
+++ b/web-design-surrey.html
@@ -150,7 +150,7 @@ permalink: /web-design-surrey/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>Web Design Services in Surrey</h1>
             </div>
