--- a/website-compliance-quick-guide.html
+++ b/website-compliance-quick-guide.html
@@ -174,7 +174,7 @@ permalink: /website-compliance-quick-guide/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>A Quick Guide to Website Compliance</h1>           
             </div>
