--- a/404.html
+++ b/404.html
@@ -149,7 +149,7 @@
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>Page Not Found</h1>
                                
