--- a/accessible-website-design.html
+++ b/accessible-website-design.html
@@ -173,7 +173,7 @@ permalink: /accessible-website-design/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>Accessible Design: Creating an Inclusive Website</h1>           
             </div>
