--- a/blog-3.html
+++ b/blog-3.html
@@ -150,7 +150,7 @@ permalink: /blog-3/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>Sybiltec's Blog Page 3</h1>
             </div>
