--- a/ecommerce-websites.html
+++ b/ecommerce-websites.html
@@ -150,7 +150,7 @@ permalink: /ecommerce-websites/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>E-commerce Websites</h1>
             </div>
