--- a/leaflet-design.html
+++ b/leaflet-design.html
@@ -150,7 +150,7 @@ permalink: /leaflet-design/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>Leaflet Design</h1>
                 <h2>A customised design for a poster or social media graphic for your event</h2>
