--- a/projects.html
+++ b/projects.html
@@ -150,7 +150,7 @@ permalink: /projects/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>Projects</h1>
                 <h2>A selection of projects I recently worked on</h2>                
