--- a/sitemap.html
+++ b/sitemap.html
@@ -150,7 +150,7 @@ permalink: /sitemap/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>Sitemap</h1>
             </div>
