--- a/training.html
+++ b/training.html
@@ -150,7 +150,7 @@ permalink: /training/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>Training</h1>
                 <h2>Equipping you with the essential skills and knowledge to succeed in business</h2>
