--- a/website-design.html
+++ b/website-design.html
@@ -150,7 +150,7 @@ permalink: /website-design/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>Web Design for Bexley Small Businesses</h1>
                 <h2>Access free business support and subsidised web design services if your small business is based in the London Borough of Bexley.</h2>
