--- a/website-maintenance.html
+++ b/website-maintenance.html
@@ -150,7 +150,7 @@ permalink: /website-maintenance/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>Website Maintenance Services in London</h1>
             </div>
