--- a/website-review.html
+++ b/website-review.html
@@ -150,7 +150,7 @@ permalink: /website-review/
                 </div>
             </div>
         </div>
-        <div class="hero center">
+        <div class="hero">
             <div class="container-1140">
                 <h1>Website Review</h1>
                 <h2>Start With an Audit of Your Site</h2>
