--- a/faqs.html
+++ b/faqs.html
@@ -88,7 +88,7 @@ permalink: /faqs/
                 "name": "What services do you offer?",
                 "acceptedAnswer": {
                     "@type": "Answer",
-                    "text":"The services I offer are: website review, website design, website development, website maintenance, training and leaflet design."
+                    "text":"The services I offer are: website review, website design, website development, website maintenance, workshops and leaflet design."
                 }
             }, {
                 "@type": "Question",
@@ -373,7 +373,7 @@ permalink: /faqs/
                     <li>Website design</li>
                     <li>Website development</li>
                     <li>Website maintenance</li>
-                    <li>Training</li>
+                    <li>Workshops</li>
                     <li>Leaflet design</li>
                 </ul>
 
@@ -463,7 +463,7 @@ permalink: /faqs/
                         <p><a href="https://sybiltec.com/website-review/">Website Review</a></p>
                         <p><a href="https://sybiltec.com/small-business-web-design/">Web Design</a></p>
                         <p><a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a></p>
-                        <p><a href="https://sybiltec.com/training/">Training</a></p>
+                        <p><a href="https://sybiltec.com/training/">Workshops</a></p>
                         <p><a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a></p>
                     </div>
                     <div class="col-3">
