--- a/sitemap.html
+++ b/sitemap.html
@@ -185,7 +185,7 @@ permalink: /sitemap/
                 <ul>
                     <li><a href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites</a></li>
                     <li><a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a></li>
-                    <li><a href="https://sybiltec.com/training/">Training</a></li>
+                    <li><a href="https://sybiltec.com/training/">Workshops</a></li>
                     <li><a href="https://sybiltec.com/small-business-web-design/">Web Design</a></li>
                     <li><a href="https://sybiltec.com/website-design/">Web Design Bexley</a></li>
                     <li><a href="https://sybiltec.com/web-design-surrey/">Web Design Surrey</a></li>
@@ -253,7 +253,7 @@ permalink: /sitemap/
                         <h4>Services</h4>
                         <p><a href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites</a></p>
                         <p><a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a></p>
-                        <p><a href="https://sybiltec.com/training/">Training</a></p>
+                        <p><a href="https://sybiltec.com/training/">Workshops</a></p>
                         <p><a href="https://sybiltec.com/small-business-web-design/">Web Design</a></p>
                         <p><a href="https://sybiltec.com/website-design/">Web Design Bexley</a></p>
                         <p><a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a></p>
