--- a/training.html
+++ b/training.html
@@ -25,19 +25,19 @@ permalink: /training/
               },{
                 "@type": "ListItem",
                 "position": 2,
-                "name": "Training"
+                "name": "Workshops"
               }]
             }
         </script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Training | Web Design Erith Bexley South East London | Sybiltec</title>       
+        <title>Workshops | Web Design Erith Bexley South East London | Sybiltec</title>       
         <meta name="Description" content="Sybil Mayard can facilitate your workshop or webinar. Past workshops have been delivered in partnership with the British Library, GLL and CNT Associates.">
         <meta name="robots" content="all">
         <link rel="canonical" href="https://sybiltec.com/training/">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Training | Web Design Erith Bexley South East London | Sybiltec" />
+        <meta property="og:title" content="Workshops | Web Design Erith Bexley South East London | Sybiltec" />
         <meta property="og:description" content="Sybil Mayard can facilitate your workshop or webinar. Past workshops have been delivered in partnership with the British Library, GLL and CNT Associates." />
         <meta property="og:url" content="https://sybiltec.com/training/" />
         <meta property="og:site_name" content="Sybiltec" />
@@ -152,8 +152,8 @@ permalink: /training/
         </div>
         <div class="hero">
             <div class="container-1140">
-                <h1>Training</h1>
-                <h2>Equipping you with the essential skills and knowledge to succeed in business</h2>
+                <h1>Workshops</h1>
+                <h2>Equipping you with the essential training, skills and knowledge to succeed in business</h2>
             </div>
         </div>
         <div class="main section">
@@ -164,7 +164,7 @@ permalink: /training/
                     </li>
                     >
                     <li>
-                        Training
+                        Workshops
                     </li>
                 </ol>
                 <p>We are available to facilitate your workshop or webinar. Here are some examples of events we've taken part in previously.</p>
@@ -176,7 +176,7 @@ permalink: /training/
 
                 <div class="row">
                     <div class="col-6"><div><img src="https://sybiltec.com/images/sybil-mayard-gary-parker-at-british-library.jpg" style="width:100%; max-width:560px;" alt="Sybil Mayard and Gary Parker at the British Library"></div></div>
-                    <div class="col-6"><p>On 25 April 2023, Sybil and her colleague Gary Parker delivered our popular in-person workshop, <em>Funding and Opportunities for E-commerce</em>.</p>
+                    <div class="col-6"><p>On 25 April 2023, Sybil and Gary Parker delivered our popular in-person workshop, <em>Funding and Opportunities for E-commerce</em>.</p>
                         <div class="padding-top padding-bottom"><a class="btn-secondary" href="https://www.eventbrite.co.uk/e/funding-and-opportunities-for-e-commerce-free-live-event-tickets-566384680827" target="_blank" rel="noopener noreferrer">Funding and Opportunities for E-commerce >></a></div>
                     </div>
                 </div>
@@ -204,7 +204,7 @@ permalink: /training/
                 </div>
                 </div>
                     <div class="col-6"><p>Sybil is a regular guest speaker on webinars hosted by <a href="https://www.cntassociates.com" target="_blank" rel="noopener noreferrer">CNT Associates</a>, where we present on various topics ranging from the basics of getting your business online, to setting up an e-commerce store with Shopify.</p>
-                    <p>Watch the video of our popular webinar, <em>Building an Online Store Using Shopify</em>.</p></div>
+                    <p>Watch the video of our popular webinar, <em><a href="https://youtu.be/-pxFjX7VG_o" target="_blank" rel="noopener noreferrer">Building an Online Store Using Shopify</a></em>.</p></div>
                 </div>
                 
             </div>
@@ -240,7 +240,7 @@ permalink: /training/
                         <p><a href="https://sybiltec.com/website-review/">Website Review</a></p>
                         <p><a href="https://sybiltec.com/small-business-web-design/">Web Design</a></p>
                         <p><a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a></p>
-                        <p><a href="https://sybiltec.com/training/">Training</a></p>
+                        <p><a href="https://sybiltec.com/training/">Workshops</a></p>
                         <p><a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a></p>
                     </div>
                     <div class="col-3">
