--- a/cyber-security-best-practices-for-business.html
+++ b/cyber-security-best-practices-for-business.html
@@ -400,7 +400,7 @@ permalink: /cyber-security-best-practices-for-business/
                         <p><a href="https://sybiltec.com/website-review/">Website Review</a></p>
                         <p><a href="https://sybiltec.com/small-business-web-design/">Web Design</a></p>
                         <p><a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a></p>
-                        <p><a href="https://sybiltec.com/training/">Training</a></p>
+                        <p><a href="https://sybiltec.com/training/">Workshops</a></p>
                         <p><a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a></p>
                     </div>
                     <div class="col-3">
