--- a/services.html
+++ b/services.html
@@ -222,7 +222,7 @@ permalink: /services/
                     <div class="col-4">
                         <div class="offer-card center">
                             <i class="fa-solid fa-graduation-cap"></i>
-                        <h3>Training</h3>
+                        <h3>Workshops</h3>
                         <p>Do you need a facilitator for your training event? We can host webinars or in-person workshops on topics ranging from getting your business online to setting up a Shopify store.</p>
                         <div class="center padding-bottom padding-top">
                             <a class="btn-secondary" href="https://sybiltec.com/training/">Training >></a>   
@@ -263,7 +263,7 @@ permalink: /services/
                         <p><a href="https://sybiltec.com/website-review/">Website Review</a></p>
                         <p><a href="https://sybiltec.com/small-business-web-design/">Web Design</a></p>
                         <p><a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a></p>
-                        <p><a href="https://sybiltec.com/training/">Training</a></p>
+                        <p><a href="https://sybiltec.com/training/">Workshops</a></p>
                         <p><a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a></p>
                     </div>
                     <div class="col-3">
