--- a/strategies-for-business-success.html
+++ b/strategies-for-business-success.html
@@ -243,7 +243,7 @@ permalink: /strategies-for-business-success/
                 <p><a href="https://sybiltec.com/website-review/">Website Review</a></p>
                 <p><a href="https://sybiltec.com/small-business-web-design/">Web Design</a></p>
                 <p><a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a></p>
-                <p><a href="https://sybiltec.com/training/">Training</a></p>
+                <p><a href="https://sybiltec.com/training/">Workshops</a></p>
                 <p><a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a></p>
             </div>
             <div class="col-3">
