--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -277,7 +277,7 @@ permalink: /terms-and-conditions/
                         <p><a href="https://sybiltec.com/website-review/">Website Review</a></p>
                         <p><a href="https://sybiltec.com/small-business-web-design/">Web Design</a></p>
                         <p><a href="https://sybiltec.com/website-maintenance/">Website Maintenance</a></p>
-                        <p><a href="https://sybiltec.com/training/">Training</a></p>
+                        <p><a href="https://sybiltec.com/training/">Workshops</a></p>
                         <p><a href="https://sybiltec.com/leaflet-design/">Leaflet Design</a></p>
                     </div>
                     <div class="col-3">
