--- a/faqs.html
+++ b/faqs.html
@@ -334,14 +334,14 @@ permalink: /faqs/
                 <hr class="left-align">
 
                 <h3>Why do I need a website?</h3>
-                <p>Every day there are thousands of searches being carried out on search engines by people looking for information on products and services. Having a good online presence is one of the best ways to get new customers and so one of the first things you'd want to do to improve your online presence is to create a website.</p>
+                <p>Every day there are thousands of searches being carried out on search engines by people looking for information on products and services. Having a good online presence is one of the best ways to gain new customers and so one of the first things you'd want to do to improve your online presence is to create a website.</p>
 
-                <p>There are many reasons why you may need a website. If you are a startup you may be trying to secure funding, and you need a proof of concept. Or if you run a medium-sized business you may need a larger website to showcase your services, clients, case studies, testimonials, portfolio of work and so on.</p>
+                <p>There are many reasons why you may need a website. If you are a start-up you may be trying to secure funding, and you need a proof of concept. Or, if you run a medium-sized business you may need a larger website to showcase your services, clients, case studies, testimonials, portfolio of work and so on.</p>
 
-                <p>But websites are not just for startups or larger businesses - even if you are a sole trader or self-employed, and you run a coaching or mentoring business for example, then having a personal website is crucial for you too.</p>
+                <p>But websites are not just for start-ups or larger businesses - even if you are a sole trader or are self-employed, and you run a coaching or mentoring business for example, then having a personal website is crucial for you too.</p>
 
                 <h3>Which platform is best for my needs?</h3>
-                <p>WordPress is the most flexible platform, so if you need a website that will adapt as your business grows, then I would recommend WordPress. However, there is a learning curve associated with it, so if your time is limited and you want to get started more quickly, then Wix would be more suitable as it's user-friendly for those who are managing their first website. Then finally we have Shopify: if you run an e-commerce business then Shopify is the best choice as it includes everything you need to get started with selling your products or services online.</p>
+                <p>WordPress is the most flexible platform, so if you need a website that will adapt as your business grows, then we would recommend WordPress. However, there is a learning curve associated with it, so if your time is limited and you want to get started more quickly, then Wix would be more suitable as it's user-friendly for those who are managing their first website. Then finally we have Shopify: if you run an e-commerce business then Shopify is the best choice as it includes everything you need to get started with selling your products or services online.</p>
 
                 <h3>What are the differences between Shopify and WooCommerce?</h3>
                 <p>Please read our blog article on <a href="https://sybiltec.com/shopify-woocommerce/">Shopify vs WooCommerce: What Are the Differences?</a> which compares the world's two most popular e-commerce platforms.</p>
@@ -361,7 +361,7 @@ permalink: /faqs/
                 <p>Please take a look at our blog post: <a href="https://sybiltec.com/guide-to-updating-your-wordpress-website/">A Guide to Updating Your WordPress Website</a>.</p>
 
                 <h3>Which Shopify plan is best for me?</h3>
-                <p>If you are just beginning your e-commerce business, then I would recommend choosing the Basic Shopify plan which provides everything you need to start selling your products or services online. When you feel that you are ready to take your business to the next level, you can upgrade to the Shopify plan, which offers advanced features and an enhanced e-commerce experience.</p>
+                <p>If you are just beginning your e-commerce business, then we would recommend choosing the Basic Shopify plan which provides everything you need to start selling your products or services online. When you feel that you are ready to take your business to the next level, you can upgrade to the Shopify plan, which offers advanced features and an enhanced e-commerce experience.</p>
 
                 <h2>Website Services Questions</h2>
                 <hr class="left-align">
