Update About page

--- a/about.html
+++ b/about.html
@@ -268,16 +268,16 @@ permalink: /about/
                         <div class="col-3"><i class="fa-brands fa-figma"></i><h3 class="smaller">Figma</h3></div>
                     </div>
                     <div class="row center">
+                        <div class="col-3"><i class="fa-solid fa-chart-simple"></i><h3 class="smaller">Google Analytics</h3></div>
                         <div class="col-3"><i class="fa-solid fa-graduation-cap"></i><h3 class="smaller">LearnDash</h3></div>
-                        <div class="col-3"><i class="fas fa-tools"></i><h3 class="smaller">Shogun</h3></div>
                         <div class="col-3"><i class="fab fa-shopify"></i><h3 class="smaller">Shopify</h3></div>
                         <div class="col-3"><i class="fa-solid fa-screwdriver-wrench"></i><h3 class="smaller">Unbounce</h3></div>
                     </div>
                     <div class="row center">
                         <div class="col-3"><i class="fab fa-wix"></i><h3 class="smaller">Wix</h3></div>
                         <div class="col-3"><i class="fa-solid fa-cart-shopping"></i><h3 class="smaller">WooCommerce</h3></div>
-                        <div class="col-3"><i class="fa-solid fa-screwdriver-wrench"></i><h3 class="smaller">WP Bakery</h3></div>
                         <div class="col-3"><i class="fab fa-wordpress"></i><h3 class="smaller">WordPress</h3></div>
+                        <div class="col-3"><i class="fa-solid fa-screwdriver-wrench"></i><h3 class="smaller">WP Bakery</h3></div>
                     </div>
                 </div>
             </div>
