--- a/services.html
+++ b/services.html
@@ -171,7 +171,7 @@ permalink: /services/
                         <div class="offer-card center">
                             <i class="fa-solid fa-laptop"></i>
                         <h3>Small Business Websites</h3>
-                        <p>If you are looking to create a website that is as unique as you are, we will design a professional, responsive and user-friendly website that perfectly reflects your brand and style.</p>
+                        <p>Through our web design service, you'll receive a bespoke, responsive and user-friendly website that perfectly reflects your unique brand and style.</p>
                         <div class="center padding-bottom padding-top">
                             <a class="btn-secondary" href="https://sybiltec.com/small-business-web-design/">Web Design >></a>   
                         </div>
@@ -181,7 +181,7 @@ permalink: /services/
                         <div class="offer-card center">
                             <i class="fa-solid fa-cart-shopping"></i>
                         <h3>E-commerce Websites</h3>
-                        <p>Are you planning to sell your products or services online? If yes, you'll need an e-commerce site. We will design and build an online store for your business on Shopify or WooCommerce.</p>
+                        <p>If you are planning to sell products or services online, you'll need an e-commerce site. We will design and build an online store on Shopify or WooCommerce.</p>
                         <div class="center padding-bottom padding-top">
                             <a class="btn-secondary" href="https://sybiltec.com/ecommerce-websites/">E-commerce Websites >></a>   
                         </div>
@@ -191,9 +191,9 @@ permalink: /services/
                         <div class="offer-card center">
                             <i class="fas fa-tools"></i>
                         <h3>Website Maintenance</h3>
-                        <p>As a business owner, you're most likely a very busy person with little time to spare! We will be your long-term partner to manage the ongoing maintenance of your website.</p>
+                        <p>A website needs regular updates in order to run efficiently. We will be your long-term partner to manage the ongoing maintenance of your website.</p>
                         <div class="center padding-bottom padding-top">
-                            <a class="btn-secondary" href="https://sybiltec.com/website-maintenance/">Web Maintenance >></a>   
+                            <a class="btn-secondary" href="https://sybiltec.com/website-maintenance/">Website Maintenance >></a>   
                         </div>
                         </div>
                     </div>
@@ -213,7 +213,7 @@ permalink: /services/
                         <div class="offer-card center">
                             <i class="fas fa-clipboard-check"></i>
                         <h3>Website Review</h3>
-                        <p>A detailed report with feedback on the main aspects of your site's user experience, search engine optimisation (SEO) and design. Recommended improvements are provided.</p>
+                        <p>We will conduct a detailed audit of your website and provide you with a PDF report of the issues found and the recommended actions to resolve them.</p>
                         <div class="center padding-bottom padding-top">
                             <a class="btn-secondary" href="https://sybiltec.com/website-review/">Website Review >></a>   
                         </div>
@@ -223,10 +223,81 @@ permalink: /services/
                         <div class="offer-card center">
                             <i class="fa-solid fa-graduation-cap"></i>
                         <h3>Workshops</h3>
-                        <p>Do you need a facilitator for your training event? We can host webinars or in-person workshops on topics ranging from getting your business online to setting up a Shopify store.</p>
+                        <p>We can facilitate your webinar or in-person workshop on topics ranging from getting your business online to setting up an e-commerce store.</p>
                         <div class="center padding-bottom padding-top">
-                            <a class="btn-secondary" href="https://sybiltec.com/training/">Training >></a>   
+                            <a class="btn-secondary" href="https://sybiltec.com/training/">Workshops >></a>   
                         </div>
+                        </div>
+                    </div>
+                </div>
+                <h2>Our Partners' Services</h2>
+                <p>By leveraging our strong networking of partners, we are able to offer a wide range of services to complement our web design offerings.</p>
+                <div class="row">
+                    <div class="col-4">
+                        <div class="offer-card center">
+                            <i class="fa-solid fa-pen-fancy"></i>
+                    <h3>Copywriting</h3>
+                    <p>Our professional copywriters will create high quality copy for your website, blog posts, brochure, event or product descriptions.</p>
+                    </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="offer-card center">
+                            <i class="fa-solid fa-chart-line"></i>
+                        <h3>SEO (Search Engine Optimisation)</h3>
+                        <p>Increase the visibility of your website and rank higher in search engine results pages (SERPs) by utilising our afforable SEO services.</p>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="offer-card center">
+                            <i class="fa-solid fa-camera"></i>
+                        <h3>Photography</h3>
+                        <p>A website isn't complete without beautiful photographs. Our experienced photographers will take care of your headshots, team photos or product photos.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-4">
+                        <div class="offer-card center">
+                            <i class="fa-solid fa-pen-ruler"></i>
+                    <h3>Logo Design</h3>
+                    <p>A logo represents the identity of your business. Our professional logo designers will ensure that you have the perfect logo to reflect your brand.</p>
+                    </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="offer-card center">
+                            <i class="fa-regular fa-thumbs-up"></i>
+                        <h3>Social Media Management</h3>
+                        <p>Building a strong social media presence takes significant time and effort. Our social media management service will do the heavy lifting for you.</p>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="offer-card center">
+                            <i class="fa-solid fa-coins"></i>
+                        <h3>Fundraising</h3>
+                        <p>Utilise our professional bid writing and grant writing services to help you secure the funding you need to start or grow your business or organisation.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-4">
+                        <div class="offer-card center">
+                            <i class="fa-solid fa-shield-halved"></i>
+                    <h3>Data Protection Compliance</h3>
+                    <p>It is essential that your business complies with relevant data protection laws. Our partners will help you on your journey to achieving compliance.</p>
+                    </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="offer-card center">
+                            <i class="fa-solid fa-mobile-screen-button"></i>
+                        <h3>Mobile App Development</h3>
+                        <p>Do you have a mobile app idea in mind? If so, our app developers will take your project from idea to reality.</p>
+                        </div>
+                    </div>
+                    <div class="col-4">
+                        <div class="offer-card center">
+                            <i class="fa-solid fa-code-branch"></i>
+                        <h3>Software Development</h3>
+                        <p>If you need a custom software application to be developed, talk to us about our software development services.</p>
                         </div>
                     </div>
                 </div>
