--- a/faqs.html
+++ b/faqs.html
@@ -256,7 +256,7 @@ permalink: /faqs/
     <body>
         <div class="announcement-bar">
             <div class="container-1140">
-                <span><i class="fa-regular fa-envelope"></i><a href="mailto:info@sybiltec.com" target="_blank">info@sybiltec.com</a></span>
+                <span><i class="fa-regular fa-envelope"></i><a href="mailto:info@sybiltec.com?subject=Website Enquiry" target="_blank">info@sybiltec.com</a></span>
             </div>
         </div>
         <div class="header">
@@ -274,8 +274,6 @@ permalink: /faqs/
                                         <a href="https://sybiltec.com/about/">About</a>
                                         <a href="https://sybiltec.com/services/">Services</a>
                                         <a href="https://sybiltec.com/clients/">Clients</a>
-                                        <a href="https://sybiltec.com/faqs/">FAQs</a>
-                                        <a href="https://sybiltec.com/blog/">Blog</a>
                                         <a href="https://sybiltec.com/contact/" class="btn-contact">Contact Us</a>
                                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                                             <i class="fas fa-bars"></i>
@@ -405,12 +403,12 @@ permalink: /faqs/
                 <div class="row">
                     <div class="col-3">
                         <h4>Links</h4>
-                        <p><a href="/">Home</a></p>
                         <p><a href="https://sybiltec.com/about/">About</a></p>
-                        <p><a href="https://sybiltec.com/contact/">Contact</a></p>
-                        <p><a href="https://sybiltec.com/terms-and-conditions/">Terms and Conditions</a></p>
-                        <p><a href="https://sybiltec.com/privacy-notice/">Privacy Notice</a></p>
+                        <p><a href="https://sybiltec.com/blog/">Blog</a></p>
+                        <p><a href="https://sybiltec.com/faqs/">FAQs</a></p>
                         <p><a href="https://sybiltec.com/sitemap/">Sitemap</a></p>
+                        <p><a href="https://sybiltec.com/privacy-notice/">Privacy Notice</a></p>
+                        <p><a href="https://sybiltec.com/terms-and-conditions/">Terms and Conditions</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
