--- a/strategies-for-business-success.html
+++ b/strategies-for-business-success.html
@@ -143,7 +143,7 @@ permalink: /strategies-for-business-success/
     <body>
         <div class="announcement-bar">
             <div class="container-1140">
-                <span><i class="fa-regular fa-envelope"></i><a href="mailto:info@sybiltec.com" target="_blank">info@sybiltec.com</a></span>
+                <span><i class="fa-regular fa-envelope"></i><a href="mailto:info@sybiltec.com?subject=Website Enquiry" target="_blank">info@sybiltec.com</a></span>
             </div>
         </div>
         <div class="header">
@@ -161,8 +161,6 @@ permalink: /strategies-for-business-success/
                                         <a href="https://sybiltec.com/about/">About</a>
                                         <a href="https://sybiltec.com/services/">Services</a>
                                         <a href="https://sybiltec.com/clients/">Clients</a>
-                                        <a href="https://sybiltec.com/faqs/">FAQs</a>
-                                        <a href="https://sybiltec.com/blog/">Blog</a>
                                         <a href="https://sybiltec.com/contact/" class="btn-contact">Contact Us</a>
                                         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
                                             <i class="fas fa-bars"></i>
